polished references and apa-quarto MS version

--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -1,79 +1,82 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Tuomas Eerola at 2025-04-02 13:11:59 +0100 
+%% Created for Tuomas Eerola at 2025-04-09 20:10:08 +0100 
 
 
-%% Saved with string encoding Unicode (UTF-8)
+%% Saved with string encoding Unicode (UTF-8) 
 
-@Article{deng2015em,
-  AUTHOR = {Deng, James J. and Leung, Clement H. C. and Milani, Alfredo and Chen, Li},
-  JOURNAL = {ACM TRANSACTIONS ON INTERACTIVE INTELLIGENT SYSTEMS},
-  MONTH = {MAR},
-  NUMBER = {1},
-  TITLE = {Emotional States Associated with Music: Classification, Prediction of Changes, and Consideration in Recommendation},
-  VOLUME = {5},
-  YEAR = {2015},
-  DOI = {10.1145/2723575},
-  BDSK = {https://doi.org/10.1145/2723575},
-  ISSN = {2160-6455},
-  EISSN = {2160-6463},
-  ORCID = {Chen, Li/0000-0002-5842-838X MILANI, Alfredo/0000-0003-4534-1805}
-}
 
-@Article{zhang2019us,
-  AUTHOR = {Zhang, Le-kai and Sun, Shou-qian and Xing, Bai-xi and Luo, Rui-ming and Zhang, Ke-jun},
-  JOURNAL = {FRONTIERS OF INFORMATION TECHNOLOGY \& ELECTRONIC ENGINEERING},
-  MONTH = {JUL},
-  NUMBER = {7},
-  PAGES = {964-974},
-  TITLE = {Using psychophysiological measures to recognize personal music emotional experience},
-  VOLUME = {20},
-  YEAR = {2019},
-  DOI = {10.1631/FITEE.1800101}}
+
+@article{deng2015em,
+	author = {Deng, James J. and Leung, Clement H. C. and Milani, Alfredo and Chen, Li},
+	bdsk = {https://doi.org/10.1145/2723575},
+	date-modified = {2025-04-09 20:09:46 +0100},
+	doi = {10.1145/2723575},
+	eissn = {2160-6463},
+	issn = {2160-6455},
+	journal = {ACM Transactions on Interactive Intelligent Systems},
+	month = {MAR},
+	number = {1},
+	orcid = {Chen, Li/0000-0002-5842-838X MILANI, Alfredo/0000-0003-4534-1805},
+	title = {Emotional States Associated with Music: Classification, Prediction of Changes, and Consideration in Recommendation},
+	volume = {5},
+	year = {2015}}
+
+@article{zhang2019us,
+	author = {Zhang, Le-kai and Sun, Shou-qian and Xing, Bai-xi and Luo, Rui-ming and Zhang, Ke-jun},
+	doi = {10.1631/FITEE.1800101},
+	journal = {FRONTIERS OF INFORMATION TECHNOLOGY \& ELECTRONIC ENGINEERING},
+	month = {JUL},
+	number = {7},
+	pages = {964-974},
+	title = {Using psychophysiological measures to recognize personal music emotional experience},
+	volume = {20},
+	year = {2019}}
 
 @article{dufour2021us,
-  author = {Dufour, Isabelle and Tzanetakis, George},
-  journal = {IEEE Transactions on Affective Computing},
-  MONTH = {JUL-SEP},
-  NUMBER = {3},
-  PAGES = {666--681},
-  TITLE = {Using Circular Models to Improve Music Emotion Recognition},
-  VOLUME = {12},
-  YEAR = {2021},
-  DOI = {10.1109/TAFFC.2018.2885744}}
+	author = {Dufour, Isabelle and Tzanetakis, George},
+	doi = {10.1109/TAFFC.2018.2885744},
+	journal = {IEEE Transactions on Affective Computing},
+	month = {JUL-SEP},
+	number = {3},
+	pages = {666--681},
+	title = {Using Circular Models to Improve Music Emotion Recognition},
+	volume = {12},
+	year = {2021}}
 
 @article{battcock2019ac,
-  title={Acoustically expressing affect},
-  author={Battcock, Aimee and Schutz, Michael},
-  journal={Music Perception: An Interdisciplinary Journal},
-  volume={37},
-  number={1},
-  pages={66--91},
-  year={2019}}
+	author = {Battcock, Aimee and Schutz, Michael},
+	journal = {Music Perception: An Interdisciplinary Journal},
+	number = {1},
+	pages = {66--91},
+	title = {Acoustically expressing affect},
+	volume = {37},
+	year = {2019}}
 
 @article{shmueli2010explain,
-  title={To Explain or to Predict?},
-  author={Shmueli, Galit},
-  journal={Statistical Science},
-  volume={25},
-  number={3},
-  pages={289--310},
-  year={2010}}
+	author = {Shmueli, Galit},
+	journal = {Statistical Science},
+	number = {3},
+	pages = {289--310},
+	title = {To Explain or to Predict?},
+	volume = {25},
+	year = {2010}}
 
 @article{hevner1936,
-  title={Experimental studies of the elements of expression in music},
-  author={Hevner, Kate},
-  journal={The American journal of psychology},
-  volume={48},
-  number={2},
-  pages={246--268},
-  year={1936}}
+	author = {Hevner, Kate},
+	date-modified = {2025-04-09 17:16:29 +0100},
+	journal = {The American Journal of Psychology},
+	number = {2},
+	pages = {246--268},
+	title = {Experimental studies of the elements of expression in music},
+	volume = {48},
+	year = {1936}}
 
 @book{yang2011,
 	address = {Boca Raton, US},
 	author = {Yang, Y.-H. and Chen, H. H.},
-	booktitle = {Yang, Y.-H., & Chen, H.H. (2011). Music Emotion Recognition (1st ed.). CRC Press. },
+	booktitle = {Yang, Y.-H., & Chen, H.H. (2011). Music Emotion Recognition (1st ed.). CRC Press.},
 	date-added = {2025-04-02 13:10:32 +0100},
 	date-modified = {2025-04-02 13:11:59 +0100},
 	doi = {https://doi.org/10.1201/b10731},
@@ -160,6 +163,7 @@
 
 @article{gingras2014be,
 	author = {Gingras, Bruno and Marin, Manuela M. and Fitch, W. Tecumseh},
+	date-modified = {2025-04-09 17:17:52 +0100},
 	doi = {10.1080/17470218.2013.863954},
 	journal = {Quarterly Journal of Experimental Psychology},
 	keywords = {Acoustic Stimulation; Acoustics; Adult; Arousal; Emotions; Female; Humans; Linear Models; Loudness Perception; Male; Music; Predictive Value of Tests; Questionnaires; Recognition (Psychology); Young Adult; acoustics; adult; arousal; auditory stimulation; emotion; female; hearing; human; male; music; physiology; predictive value; psychology; questionnaire; recognition; statistical model; young adult},
@@ -168,7 +172,6 @@
 	pages = {1428 -- 1446},
 	source = {scopus},
 	title = {Beyond intensity: Spectral features effectively predict music-induced subjective arousal},
-	type = {Article},
 	volume = {67},
 	year = {2014}}
 
@@ -298,53 +301,48 @@
 @article{hizlisoy2021mu,
 	author = {Hizlisoy, Serhat and Yildirim, Serdar and Tufekci, Zekeriya},
 	date-added = {2025-02-22 17:52:10 +0000},
-	date-modified = {2025-02-22 17:52:10 +0000},
+	date-modified = {2025-04-09 17:13:29 +0100},
 	doi = {10.1016/j.jestch.2020.10.009},
 	journal = {Engineering Science and Technology, an International Journal},
 	number = {3},
 	pages = {760 -- 767},
 	title = {Music emotion recognition using convolutional long short term memory deep neural networks},
-	type = {Article},
 	volume = {24},
 	year = {2021}}
 
 @article{nguyen2017an,
 	author = {Nguyen, Van Loi and Kim, Donglim and Ho, Van Phi and Lim, Younghwan},
 	date-added = {2025-02-22 17:52:10 +0000},
-	date-modified = {2025-02-22 17:52:10 +0000},
+	date-modified = {2025-04-09 19:09:30 +0100},
 	doi = {10.11591/ijece.v7i3.pp1246-1254},
 	journal = {International Journal of Electrical and Computer Engineering},
 	number = {3},
 	pages = {1246 -- 1254},
 	title = {A new recognition method for visualizing music emotion},
-	type = {Article},
 	volume = {7},
 	year = {2017}}
 
 @article{panda2020no,
 	author = {Panda, R. and Malheiro, R. and Paiva, R. P.},
 	date-added = {2025-02-22 17:52:10 +0000},
-	date-modified = {2025-02-26 11:19:59 +0000},
+	date-modified = {2025-04-09 19:09:35 +0100},
 	doi = {10.1109/TAFFC.2018.2820691},
 	journal = {IEEE Transactions on Affective Computing},
 	number = {4},
 	pages = {614 -- 626},
 	title = {Novel Audio Features for Music Emotion Recognition},
-	type = {Article},
 	volume = {11},
 	year = {2020}}
 
 @article{zhang2017fe,
 	author = {Zhang, Jiang Long and Huang, Xiang Lin and Yang, Li Fang and Xu, Ye and Sun, Shu Tao},
 	date-added = {2025-02-22 17:52:10 +0000},
-	date-modified = {2025-02-22 17:52:10 +0000},
+	date-modified = {2025-04-09 19:09:43 +0100},
 	doi = {10.1007/s00530-015-0489-y},
 	journal = {Multimedia Systems},
 	number = {2},
 	pages = {251 -- 264},
-	source = {scopus},
 	title = {Feature selection and feature learning in arousal dimension of music emotion by using shrinkage methods},
-	type = {Article},
 	url = {https://www.scopus.com/inward/record.uri?eid = 2-s2.0-84944937222&doi = 10.1007%2fs00530-015-0489-y&partnerID = 40&md5 = f12764992ee29a4976644aacf6bbb43d},
 	volume = {23},
 	year = {2017}}
@@ -417,18 +415,15 @@
 	abstract = {Temporal dynamics have been increasingly recognized as an important component of facial expressions. With the need for appropriate stimuli in research and application, a range of databases of dynamic facial stimuli has been developed. The present article reviews the existing corpora and describes the key dimensions and properties of the available sets. This includes a discussion of conceptual features in terms of thematic issues in dataset construction as well as practical features which are of applied interest to stimulus usage. To identify the most influential sets, we further examine their citation rates and usage frequencies in existing studies. General limitations and implications for emotion research are noted and future directions for stimulus generation are outlined.},
 	author = {Krumhuber, Eva G. and Skora, Lina and K{\"u}ster, Dennis and Fou, Linyun},
 	date-added = {2025-02-09 15:32:28 +0000},
-	date-modified = {2025-02-09 15:33:46 +0000},
+	date-modified = {2025-04-09 19:09:57 +0100},
 	doi = {10.1177/1754073916670022},
-	file = {/Users/lqbn73/Zotero/storage/PSMP9SIM/Krumhuber et al. - 2017 - A Review of Dynamic Datasets for Facial Expression Research.pdf},
 	issn = {1754-0739},
 	journal = {Emotion Review},
-	langid = {english},
 	month = jul,
 	number = {3},
 	pages = {280--292},
 	publisher = {SAGE Publications},
 	title = {A Review of Dynamic Datasets for Facial Expression Research},
-	urldate = {2024-09-13},
 	volume = {9},
 	year = {2017}}
 
@@ -502,6 +497,7 @@
 
 @article{yeh2014po,
 	author = {Yeh, Chia-Hung and Tseng, Wen-Yu and Chen, Chia-Yen and Lin, Yu-Dun and Tsai, Yi-Ren and Bi, Hsuan-I and Lin, Yu-Ching and Lin, Ho-Yi},
+	date-modified = {2025-04-09 19:09:15 +0100},
 	doi = {10.1007/s11042-013-1687-2},
 	journal = {Multimedia Tools and Applications},
 	keywords = {Multimedia systems; Chorus; Emotion; MFCCs; Popular music; Rhythm; Verse; Adaptive boosting},
@@ -510,19 +506,18 @@
 	pages = {2103 -- 2128},
 	source = {scopus},
 	title = {Popular music representation: chorus detection & emotion recognition},
-	type = {Article},
 	url = {https://www.scopus.com/inward/record.uri?eid = 2-s2.0-84912027522&doi = 10.1007%2fs11042-013-1687-2&partnerID = 40&md5 = 6ce0fe7a0b38a6e2037403e140bd0a60},
 	volume = {73},
 	year = {2014}}
 
 @article{yang2021an,
 	author = {Yang, Jing},
+	date-modified = {2025-04-09 19:09:09 +0100},
 	doi = {10.3389/fpsyg.2021.760060},
 	journal = {Frontiers in Psychology},
 	note = {Cited by: 14; All Open Access, Gold Open Access, Green Open Access},
 	source = {scopus},
 	title = {A Novel Music Emotion Recognition Model Using Neural Network Technology},
-	type = {Article},
 	url = {https://www.scopus.com/inward/record.uri?eid = 2-s2.0-85116855247&doi = 10.3389%2ffpsyg.2021.760060&partnerID = 40&md5 = d8babd4e6050f14375d2b4632dfdb587},
 	volume = {12},
 	year = {2021}}
@@ -540,9 +535,10 @@
 
 @article{xie2020mu,
 	author = {Xie, Baijun and Kim, Jonathan C. and Park, Chung Hyuk},
+	date-modified = {2025-04-09 17:15:06 +0100},
 	doi = {10.3390/app10030902},
 	eissn = {2076-3417},
-	journal = {APPLIED SCIENCES-BASEL},
+	journal = {Applied Sciences},
 	month = {FEB},
 	number = {3},
 	source = {web_of_science},
@@ -565,20 +561,20 @@
 
 @article{wang2022co,
 	author = {Wang, Xin and Wang, Li and Xie, Lingyun},
-	date-modified = {2025-02-09 14:31:22 +0000},
+	date-modified = {2025-04-09 17:18:12 +0100},
 	doi = {10.3390/app12125787},
 	journal = {Applied Sciences},
 	note = {Cited by: 7; All Open Access, Gold Open Access},
 	number = {12},
 	source = {scopus},
 	title = {Comparison and Analysis of Acoustic Features of Western and Chinese Classical Music Emotion Recognition Based on V‐A Model},
-	type = {Article},
 	url = {https://www.scopus.com/inward/record.uri?eid = 2-s2.0-85132193259&doi = 10.3390%2fapp12125787&partnerID = 40&md5 = 96f19b725a52bb52a769612e02f0a74c},
 	volume = {12},
 	year = {2022}}
 
 @article{sorussa2020em,
 	author = {Sorussa, Kanawat and Choksuriwong, Anant and Karnjanadecha, Montri},
+	date-modified = {2025-04-09 17:18:06 +0100},
 	doi = {10.37936/ecti-cit.2020141.205317},
 	journal = {ECTI Transactions on Computer and Information Technology},
 	note = {Cited by: 4; All Open Access, Gold Open Access},
@@ -586,7 +582,6 @@
 	pages = {53 -- 66},
 	source = {scopus},
 	title = {Emotion classi cation system for digital music with a cascaded technique},
-	type = {Article},
 	url = {https://www.scopus.com/inward/record.uri?eid = 2-s2.0-85084006024&doi = 10.37936%2fecti-cit.2020141.205317&partnerID = 40&md5 = 508dd81e9a9120b0c6e87d44e90a2d5a},
 	volume = {14},
 	year = {2020}}
@@ -607,11 +602,12 @@
 
 @article{orjesek2022en,
 	author = {Orjesek, Richard and Jarina, Roman and Chmulik, Michal},
+	date-modified = {2025-04-09 17:15:45 +0100},
 	doi = {10.1007/s11042-021-11584-7},
 	earlyaccessdate = {JAN 2022},
 	eissn = {1573-7721},
 	issn = {1380-7501},
-	journal = {MULTIMEDIA TOOLS AND APPLICATIONS},
+	journal = {Multimedia Tools and Applications},
 	month = {FEB},
 	number = {4},
 	pages = {5017-5031},
@@ -634,6 +630,7 @@
 
 @article{markov2014mu,
 	author = {Markov, Konstantin and Matsui, Tomoko},
+	date-modified = {2025-04-09 17:17:57 +0100},
 	doi = {10.1109/ACCESS.2014.2333095},
 	journal = {IEEE Access},
 	keywords = {Classification (of information); Feature extraction; Gaussian distribution; Gaussian noise (electronic); Image retrieval; Support vector machines; Time series analysis; Coefficient of determination; Dimensionality reduction; Feature extraction methods; Gaussian Processes; Music emotions; Music genre classification; Music information retrieval; Prediction uncertainty; Audio acoustics},
@@ -641,16 +638,16 @@
 	pages = {688 -- 697},
 	source = {scopus},
 	title = {Music genre and emotion recognition using Gaussian processes},
-	type = {Article},
 	url = {https://www.scopus.com/inward/record.uri?eid = 2-s2.0-84923317754&doi = 10.1109%2fACCESS.2014.2333095&partnerID = 40&md5 = 91033029d14599965aafb73fa7175273},
 	volume = {2},
 	year = {2014}}
 
 @article{hu2022de,
 	author = {Hu, Xiao and Li, Fanjie and Liu, Ruilun},
+	date-modified = {2025-04-09 17:14:52 +0100},
 	doi = {10.3390/app12189354},
 	eissn = {2076-3417},
-	journal = {APPLIED SCIENCES-BASEL},
+	journal = {Applied Sciences},
 	month = {SEP},
 	number = {18},
 	source = {web_of_science},
@@ -660,10 +657,10 @@
 
 @article{hu2017cr,
 	author = {Hu, X. and Yang, Y.-H.},
-	date-modified = {2025-02-26 11:22:11 +0000},
+	date-modified = {2025-04-09 20:09:59 +0100},
 	doi = {10.1109/TAFFC.2016.2523503},
 	issn = {1949-3045},
-	journal = {IEEE TRANSACTIONS ON AFFECTIVE COMPUTING},
+	journal = {IEEE Transactions on Affective Computing},
 	month = {APR-JUN},
 	number = {2},
 	pages = {228-240},
@@ -686,10 +683,10 @@
 
 @article{chin2018pr,
 	author = {Chin, Yu-Hao and Wang, Jia-Ching and Wang, Ju-Chiang and Yang, Y.-H.},
-	date-modified = {2025-02-26 11:21:37 +0000},
+	date-modified = {2025-04-09 20:08:50 +0100},
 	doi = {10.1109/TAFFC.2016.2628794},
 	issn = {1949-3045},
-	journal = {IEEE TRANSACTIONS ON AFFECTIVE COMPUTING},
+	journal = {IEEE Transactions on Affective Computing},
 	month = {OCT-DEC},
 	number = {4},
 	pages = {541-549},
@@ -700,11 +697,11 @@
 
 @article{chen2017co,
 	author = {Chen, Yu-An and Wang, Ju-Chiang and Yang, Y.-H. and Chen, Homer H.},
-	date-modified = {2025-02-26 11:21:10 +0000},
+	date-modified = {2025-04-09 20:08:37 +0100},
 	doi = {10.1109/TASLP.2017.2693565},
 	eissn = {2329-9304},
 	issn = {2329-9290},
-	journal = {IEEE-ACM TRANSACTIONS ON AUDIO SPEECH AND LANGUAGE PROCESSING},
+	journal = {IEEE/ACM Transactions on Audio, Speech, and Language Processing},
 	month = {JUL},
 	number = {7},
 	pages = {1409-1420},
@@ -726,17 +723,18 @@
 
 @article{bhuvanakumar2023em,
 	author = {Bhuvana Kumar, V. and Kathiravan, M.},
+	date-modified = {2025-04-09 17:17:41 +0100},
 	doi = {10.3389/fcomp.2023.1305413},
 	journal = {Frontiers in Computer Science},
 	note = {Cited by: 0; All Open Access, Gold Open Access},
 	source = {scopus},
 	title = {Emotion recognition from MIDI musical file using Enhanced Residual Gated Recurrent Unit architecture},
-	type = {Article},
 	volume = {5},
 	year = {2023}}
 
 @article{bai2017mu,
 	author = {Bai, Junjie and Luo, Kan and Peng, Jun and Shi, Jinliang and Wu, Ying and Feng, Lixiao and Li, Jianqing and Wang, Yingxu},
+	date-modified = {2025-04-09 17:17:35 +0100},
 	doi = {10.4018/IJCINI.2017100105},
 	journal = {International Journal of Cognitive Informatics and Natural Intelligence},
 	keywords = {Artificial intelligence; Arts computing; Barium compounds; Discriminant analysis; Feature extraction; Fuzzy neural networks; Image retrieval; Learning systems; Nearest neighbor search; Pattern recognition; Psychophysiology; Support vector machines; Affective Computing; Classification methodologies; Emotion classification; K nearest neighbor (KNN); Linear discriminant analysis; Multiple disciplines; Music emotions; Neuro-fuzzy network; Learning algorithms},
@@ -744,7 +742,6 @@
 	pages = {80 -- 92},
 	source = {scopus},
 	title = {Music emotions recognition by machine learning with cognitive classification methodologies},
-	type = {Article},
 	url = {https://www.scopus.com/inward/record.uri?eid = 2-s2.0-85038434665&doi = 10.4018%2fIJCINI.2017100105&partnerID = 40&md5 = a2e1f1d69ab6ceb6f0cee7f2eb26985a},
 	volume = {11},
 	year = {2017}}
@@ -765,6 +762,7 @@
 
 @article{alvarez2023ri,
 	author = {{\'A}lvarez, P. and de Quir{\'o}s, J. Garc{\'\i}a and Baldassarri, S.},
+	date-modified = {2025-04-09 17:17:30 +0100},
 	doi = {10.9781/ijimai.2022.04.002},
 	journal = {International Journal of Interactive Multimedia and Artificial Intelligence},
 	note = {Cited by: 4; All Open Access, Gold Open Access, Green Open Access},
@@ -772,13 +770,13 @@
 	pages = {168 -- 181},
 	source = {scopus},
 	title = {RIADA: A Machine-Learning Based Infrastructure for Recognising the Emotions of Spotify Songs},
-	type = {Article},
 	url = {https://www.scopus.com/inward/record.uri?eid = 2-s2.0-85147947463&doi = 10.9781%2fijimai.2022.04.002&partnerID = 40&md5 = 8f61f829c998052047f5da67adcf48c9},
 	volume = {8},
 	year = {2023}}
 
 @article{agarwal2021an,
 	author = {Agarwal, Gaurav and Om, Hari},
+	date-modified = {2025-04-09 17:17:23 +0100},
 	doi = {10.1049/sil2.12015},
 	journal = {IET Signal Processing},
 	keywords = {Character recognition; Emotion Recognition; Learning systems; Recurrent neural networks; Regression analysis; Storms; Auto encoders; Emotion classification; Emotion recognition; Feature representation; Hidden layers; High-level features; K-medoid; Music emotions; Support vector regression models; Support vector regressions; Music},
@@ -787,16 +785,16 @@
 	pages = {98 -- 121},
 	source = {scopus},
 	title = {An efficient supervised framework for music mood recognition using autoencoder-based optimised support vector regression model},
-	type = {Article},
 	url = {https://www.scopus.com/inward/record.uri?eid = 2-s2.0-85116929889&doi = 10.1049%2fsil2.12015&partnerID = 40&md5 = 4e078ee8b1c740d21d4b7d8dbf7f6cd8},
 	volume = {15},
 	year = {2021}}
 
 @article{wang2021ac,
 	author = {Wang, Xin and Wei, Yujia and Heng, Lena and McAdams, Stephen},
+	date-modified = {2025-04-09 17:16:38 +0100},
 	doi = {10.3389/fpsyg.2021.732865},
 	issn = {1664-1078},
-	journal = {FRONTIERS IN PSYCHOLOGY},
+	journal = {Frontiers in Psychology},
 	month = {SEP 29},
 	title = {A Cross-Cultural Analysis of the Influence of Timbre on Affect Perception in Western Classical Music and Chinese Music Traditions},
 	volume = {12},
@@ -840,11 +838,11 @@
 @article{beveridge2018po,
 	author = {Beveridge, Scott and Knox, Don},
 	date-added = {2024-10-11 11:31:06 +0100},
-	date-modified = {2024-10-11 11:31:06 +0100},
+	date-modified = {2025-04-09 17:16:46 +0100},
 	doi = {10.1177/0305735617713834},
 	eissn = {1741-3087},
 	issn = {0305-7356},
-	journal = {PSYCHOLOGY OF MUSIC},
+	journal = {Psychology of Music},
 	month = {MAY},
 	number = {3},
 	pages = {411-423},
@@ -857,12 +855,12 @@
 @article{griffiths2021am,
 	author = {Griffiths, Darryl and Cunningham, Stuart and Weinel, Jonathan and Picking, Richard},
 	date-added = {2024-10-11 11:30:37 +0100},
-	date-modified = {2024-10-11 11:30:37 +0100},
+	date-modified = {2025-04-09 17:14:16 +0100},
 	doi = {10.1080/09298215.2021.1977336},
 	earlyaccessdate = {SEP 2021},
 	eissn = {1744-5027},
 	issn = {0929-8215},
-	journal = {JOURNAL OF NEW MUSIC RESEARCH},
+	journal = {Journal of New Music Research},
 	month = {AUG 8},
 	number = {4},
 	pages = {355-372},
@@ -933,7 +931,7 @@
 	author = {Zhang, Meixian and Zhu, Yonghua and Zhang, Wenjun and Zhu, Yunwen and Feng, Tianyu},
 	bdsk = {https://doi.org/10.1007/s11042-022-13577-6},
 	date-added = {2024-09-25 11:16:42 +0100},
-	date-modified = {2024-09-25 11:16:42 +0100},
+	date-modified = {2025-04-09 17:15:56 +0100},
 	doi = {10.1007/s11042-022-13577-6},
 	earlyaccessdate = {AUG 2022},
 	eissn = {1573-7721},
@@ -944,7 +942,7 @@
 	feature_reduction_method = {weighted attention module, feature augmentation},
 	feature_source = {daubechie, MIRToolbox, Sound Description Toolbox, filter bank output (size = 120*120), 60 handcrafted features (size = 60*60)},
 	issn = {1380-7501},
-	journal = {MULTIMEDIA TOOLS AND APPLICATIONS},
+	journal = {Multimedia Tools and Applications},
 	model_category = {regression},
 	model_complexity_parameters = {Batch size: 15, mixup technique applied to spectrograms, first convolutional layer alpha: 0.2, learning rate: 0.001, decreasing by 1/10 every 10 epochs. Adam optimizer. Dropout ratio 0.3 and 0.2, alpha = 0.18, beta = 0.49},
 	model_detail = {Modularized Composite Attention Network. Case 1: no sample reconstruction. Case 2: no handcrafted features (or feature augmentation). Case 3: No self-attention mechanism or BLSTM. Case 4: no style embedding module},
@@ -1025,7 +1023,7 @@
 	author = {Saiz-Clar, Elena and Angel Serrano, Miguel and Manuel Reales, Jose},
 	bdsk = {https://doi.org/10.1177/03057356211031658},
 	date-added = {2024-09-25 11:02:28 +0100},
-	date-modified = {2024-09-25 11:02:28 +0100},
+	date-modified = {2025-04-09 17:16:51 +0100},
 	doi = {10.1177/03057356211031658},
 	earlyaccessdate = {AUG 2021},
 	eissn = {1741-3087},
@@ -1036,7 +1034,7 @@
 	feature_reduction_method = {correlation significance, PCA},
 	feature_source = {MIRToolbox},
 	issn = {0305-7356},
-	journal = {PSYCHOLOGY OF MUSIC},
+	journal = {Psychology of Music},
 	model_category = {regression},
 	model_complexity_parameters = {23},
 	model_detail = {MLR, five predictors following PCA},
@@ -1443,9 +1441,9 @@
 @article{nag2022,
 	author = {Nag, Sayan and Basu, Medha and Sanyal, Shankha and Banerjee, Archi and Ghosh, Dipak},
 	date = {2022},
+	date-modified = {2025-04-09 17:18:02 +0100},
 	doi = {10.1016/j.physa.2022.127261},
 	journal = {Physica A: Statistical Mechanics and its Applications},
-	note = {Type: Article},
 	title = {On the application of deep learning and multifractal techniques to classify emotions and instruments using Indian Classical Music},
 	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-85127732290&doi=10.1016%2fj.physa.2022.127261&partnerID=40&md5=634cc77ee93e9ac834ca0dad8b815119},
 	volume = {597},
@@ -1456,10 +1454,9 @@
 @article{chin2018,
 	author = {Chin, Yu-Hao and Wang, Jia-Ching and Wang, Ju-Chiang and Yang, Y.-H.},
 	date = {2018},
-	date-modified = {2025-02-26 11:21:45 +0000},
+	date-modified = {2025-04-09 17:17:48 +0100},
 	doi = {10.1109/TAFFC.2016.2628794},
 	journal = {IEEE Transactions on Affective Computing},
-	note = {Type: Article},
 	number = {4},
 	pages = {541 {\textendash} 549},
 	title = {Predicting the Probability Density Function of Music Emotion Using Emotion Space Mapping},
