--- a/manuscript/_figure3.qmd
+++ b/manuscript/_figure3.qmd
@@ -67,6 +67,6 @@ fp1 <- grid.grabExpr(print(data |>
 #gridExtra::grid.arrange(fp1, fp2, ncol=2, widths=c(2,1))
 #ggarrange(fp1,fp2, ncol = 2, labels = c("A","B"),widths=c(2,1)) # added labels A and B
 ggarrange(fp1) #  
-ggsave(filename = 'figure3.pdf', width = 12, height = 6, units = 'in',fp1)
+#ggsave(filename = 'figure3.pdf', width = 12, height = 6, units = 'in',fp1)
 
 ```
