manuscript: add information about encoding exceptions
- moved classification paradigm explanations to methods
- added explanation of exceptions (e.g., activation/resonance/tension concepts)

--- a/manuscript/manuscript.qmd
+++ b/manuscript/manuscript.qmd
@@ -120,7 +120,9 @@ In the search stage, we used three databases, *Web of Science*, *Scopus*, and *O
 
 The initial search yielded 553 potential studies after excluding duplicate entries. We interactively screened them for relevance in three stages, resulting in 46 studies that passed our inclusion criteria (music emotion studies using classification or regression methods to predict emotion ratings of music using symbolic or audio features, and containing sufficient detail to convert results to $r$ or $MCC$ values see [Study Data and Code Repository - Extraction Details](https://tuomaseerola.github.io/metaMER/studies/extraction_details.html) for a breakdown). After the screening stage, we defined a set of entities to extract characterising (i) music (genre, stimulus number \[N\], duration), (ii) features extracted (number, type, source, defined by [@panda2020audio]), (iii) model type (regression, neural network, SVM, etc.) and outcome measure ($R^2$, *MSE*, *MCC*), (iv) model complexity (i.e., approximate number of features used to predict ratings), and (v) type of model cross-validation. Summary of the common datasets used in the studies in available at [Study Data and Code Repository - Datasets](https://tuomaseerola.github.io/metaMER/manuscript/datasets.html).
 
-We converted all regression results from $R^2$ values into $r$ values for valence and arousal, and classification results into Matthews correlation coefficient [*MCC*, @chicco2020advantages]. To increase consistency in our analyses, we excluded studies using incompatible features (e.g., spectrograms of audio files [@nag2022]), or dependent variables (e.g., one regression study analyzed valence and arousal together, but not separately [@chin2018]).
+We converted all regression results from $R^2$ values into $r$ values for valence and arousal, and classification results into Matthews correlation coefficient [*MCC*, @chicco2020advantages]. We excluded irrelevant emotion dimensions (e.g., resonance in @deng2015em) and re-coded analogous labels (e.g., *activation* in @saizclar2022pr). Some regression studies operationalized arousal using dimensions of energy and tension [@wang2022cr]. For these studies, we excluded tension, as it has been shown to overlap considerably with valence, and with energy after partialling out the effect of valence [@eerola2011comparison]. To increase consistency in our analyses, we excluded studies using incompatible features (e.g., spectrograms of audio files in @nag2022) or dependent variables (@chin2018 evaluates valence and arousal as a single dimension).
+
+For classification studies, the number of emotion classes ranged from two to eight. Most studies predicted classes corresponding to the affective dimensions of the circumplex model, or discrete emotion labels mapping onto them [e.g., happy, sad, nervous, and calm and similar variants used in @agarwal2021an; @alvarez2023ri; @yeh2014po]. Despite the popularity of the circumplex, its treatment varied substantially between studies. Examples range from predicting quadrants in a multi-class problem [@panda2020no] or in a series of binary classification problems [@bhuvanakumar2023em], or dividing each quadrant into multiple sublevels [@nguyen2017an; @sorussa2020em]. Some studies predicted valence and arousal separately [@hu2022de; @zhang2016br], whereas others excluded valence (e.g., all models in @zhang2017fe; the CART model in @zhang2016br) or specific quadrants (@hizlisoy2021mu excludes the bottom-right quadrant). Only a few studies classified valence and arousal separately; for these studies we averaged prediction success across both emotion concepts.
 
 {{< include _figure1.qmd >}}
 
@@ -143,7 +145,7 @@ First we describe the overall pattern of data (regression vs. classification, mo
 TABLE 1: Summary of data
 
 |   | Regression | Classification | Total |
-|:----------------|:-------------------|:-----------------|:----------------|
+|:-----------------|:-------------------|:-----------------|:-----------------|
 | Study N | 22 | 12 | 34 |
 | Model N | 204 | 86 | 290 |
 | Techniques | Neural Nets (NN): 64 | 21 | 85 |
@@ -271,9 +273,7 @@ The analysis of the subdivision of studies shows that there is no significant di
 
 ## Results for classification studies
 
-We next evaluated classification studies. The number of emotion classes predicted varied between studies, ranging from two to eight. Across studies, most operationalizations corresponded to either affective dimensions of the circumplex model or discrete emotion labels mapping to those dimensions [e.g., happy, sad, nervous, and calm and similar variants used in @agarwal2021an; @alvarez2023ri; @yeh2014po]. Despite common adoption of the circumplex quadrants, studies differed in modelling decisions: one study predicted quadrants in a multi-class problem [@panda2020no], whereas another predicted them in a series of binary classification tasks [@bhuvanakumar2023em]. Others predicted valence and arousal in separate tasks [@hu2022de; @zhang2016br], and some of the models analyzed only predicted arousal [e.g., all models in @zhang2017fe; the CART model in @zhang2016br]. Finally, some studies excluded specific quadrants [@hizlisoy2021mu] due to a lack of relevant stimuli, whereas others divided quadrants into multiple levels of valence and arousal [@nguyen2017an; @sorussa2020em]. Because only a few studies separately reported valence and arousal or quadrant classification, we averaged prediction success across them for each model to increase comparability with other studies.
-
-Figure 4 shows forest plot visualization from the random-effects model of the best-performing models in classification studies. $MCC$s vary across a wide range, ranging from 0.55 to 0.98. Table 4 indicates that using the best model from each study increases performance relative to all models ($MCC$ = 0.868 95%CI: 0.748-0.934), yet slightly increases heterogeneity ($\tau^2$ = 0.318, $I^2$ = 99.8%).
+We next evaluated classification studies. Figure 4 shows forest plot visualization from the random-effects model of the best-performing models in classification studies. $MCC$s vary across a wide range, ranging from 0.55 to 0.98. Table 4 indicates that using the best model from each study increases performance relative to all models ($MCC$ = 0.868 95%CI: 0.748-0.934), yet slightly increases heterogeneity ($\tau^2$ = 0.318, $I^2$ = 99.8%).
 
 {{< include _figure4.qmd >}}
 
