--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -6,7 +6,16 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
-
+@article{eerola2011comparison,
+  title={A comparison of the discrete and dimensional models of emotion in music},
+  author={Eerola, Tuomas and Vuoskoski, Jonna K},
+  journal={Psychology of Music},
+  volume={39},
+  number={1},
+  pages={18--49},
+  year={2011},
+  publisher={Sage Publications Sage UK: London, England}
+}
 
 @article{deng2015em,
 	author = {Deng, James J. and Leung, Clement H. C. and Milani, Alfredo and Chen, Li},
@@ -1722,3 +1731,15 @@
 	pages = {115{\textendash}154},
 	title = {Cybernetics and music},
 	year = {1969}}
+
+@article{wang2021,
+	title = {Research on Intelligent Recognition and Classification Algorithm of Music Emotion in Complex System of Music Performance},
+	author = {Wang, Daliang and Guo, Xiaowen},
+	year = {2021},
+	date = {2021},
+	journal = {Complexity},
+	volume = {2021},
+	doi = {10.1155/2021/4251827},
+	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-85109435136&doi=10.1155%2f2021%2f4251827&partnerID=40&md5=b1866e5ba2f0b3b1ca5047cf2e22c97c},
+	note = {Type: Article}
+}
